--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-lottie-player",
+  "name": "@mishusoft/react-lottie-player",
   "version": "1.0.0",
   "description": "Lottie Player with ReactJS",
   "author": "mralaminahamed",
